--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
         </div>
         <button type="button" class="btn btn-primary btn-style"><a href="#">Sumbit</a></button>
     </div>
-    <div class="col-md-4 mx-5">
+    <div class="col-md-4 mx-md-5">
         <div>
             <h2>Head Office</h2>
             <p>42 rue Rouelle
